merged r3749 from trunk
git-svn-id: https://svn.code.sf.net/p/cogkit/svn/branches/4.1.10@3750 5b74d2a0-fa0e-0410-85ed-ffba77ec0bde